[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tactical-runtime-core"
version = "1.0.2"
description = "Tactical Runtime Core Library"
authors = [{ name = "Steven Bryant", email = "srbryant86@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
